[rewrite] Add `UpdateMavenWrapper`
Signed-off-by: Vincent Potucek <vpotucek@me.com>