@@ -52,7 +52,7 @@ public class FunctionsTest extends TestCase {
 
   public void testIdentity_notSame() {
     Function<Long, Long> identity = Functions.identity();
-    assertNotSame(Long.valueOf(135135L), identity.apply(Long.valueOf(135135L)));
+    assertNotSame(new Long(135135L), identity.apply(new Long(135135L)));
   }
 
   @J2ktIncompatible
